<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_detail"

    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsinglayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:title="@string/_4h_volume_USD"
            app:toolbarId="@+id/toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:background="@drawable/bg_image"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/bg_gradient" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:transitionName="@string/image_symbol_transition"
                    app:srcCompat="@mipmap/ic_launcher_round" />

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:fitsSystemWindows="true">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/text_price_btc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/nunito_sans"
                        android:maxLines="2"
                        android:textColor="#212121"
                        android:textSize="16sp"
                        android:transitionName="@string/text_price_btc_transition"
                        app:layout_constraintEnd_toStartOf="@+id/text_price_usd"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Price BTC: 1.222222222222222" />

                    <TextView
                        android:id="@+id/text_market_cap_usd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/nunito_sans"
                        android:maxLines="2"
                        android:paddingStart="4dp"
                        android:textColor="#212121"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/text_4h_volume_usd"
                        tools:text="Market cap USD: 1" />

                    <TextView
                        android:id="@+id/text_price_usd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/nunito_sans"
                        android:maxLines="2"
                        android:paddingStart="4dp"
                        android:textColor="#212121"
                        android:textSize="16sp"
                        android:transitionName="@string/text_price_usd_transition"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/text_price_btc"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Price USD: 0.1" />

                    <TextView
                        android:id="@+id/text_4h_volume_usd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/nunito_sans"
                        android:maxLines="2"
                        android:textColor="#212121"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/text_market_cap_usd"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:text="24h volume USD: 123123123.5" />

                    <View
                        android:id="@+id/divider"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@android:color/darker_gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/image_24h"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginTop="8dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:transitionName="@string/image_change1h_transition"
                        app:layout_constraintEnd_toEndOf="@id/text_24h"
                        app:layout_constraintStart_toStartOf="@id/text_24h"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp" />

                    <ImageView
                        android:id="@+id/image_7d"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginTop="8dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:transitionName="@string/image_change7d_transition"
                        app:layout_constraintEnd_toEndOf="@+id/text_7d"
                        app:layout_constraintStart_toStartOf="@+id/text_7d"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_arrow_drop_up_black_24dp" />

                    <ImageView
                        android:id="@+id/image_1h"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginTop="8dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="@+id/text_1h"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintStart_toStartOf="@+id/text_1h"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp" />

                    <TextView
                        android:id="@+id/text_1h"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/nunito_sans"
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="16sp"
                        android:textStyle="italic"
                        android:transitionName="@string/text_change1h_transition"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/text_24h"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/image_1h"
                        app:layout_constraintVertical_bias="0.0"
                        tools:text="1h: -20%" />

                    <TextView
                        android:id="@+id/text_24h"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/nunito_sans"
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="16sp"
                        android:textStyle="italic"
                        android:transitionName="@string/text_change24h_transition"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/text_7d"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/text_1h"
                        app:layout_constraintTop_toBottomOf="@+id/image_24h"
                        tools:text="24h: -20%" />

                    <TextView
                        android:id="@+id/text_7d"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/nunito_sans"
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_green_dark"
                        android:textSize="16sp"
                        android:textStyle="italic"
                        android:transitionName="@string/text_change7d_transition"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/text_24h"
                        app:layout_constraintTop_toBottomOf="@+id/image_7d"
                        tools:text="7d: 20%" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_favorite_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@android:drawable/ic_input_add"
        android:tint="@android:color/white"
        app:elevation="2dp"
        app:fabSize="normal"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end"
        app:pressedTranslationZ="2dp"
        app:rippleColor="@android:color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>